<resources>
    <string name="app_name">Music</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="back_button"><![CDATA[<<]]></string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="forward_button"><![CDATA[>>]]></string>
    <string name="default_time">00:00</string>


    </resources>
