<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.music.Visual">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:id="@+id/visualization"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
           />
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Source"
            android:textColor="#000"
            android:textSize="20sp"
            android:id="@+id/song"
            android:layout_marginTop="10dip"
            android:gravity="center" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/txt_max_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/default_time" />



        <TextView
            android:id="@+id/txt_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="205dp"

            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="@string/default_time" />

        </LinearLayout>



        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:text="@string/back_button" />

            <ImageButton
                android:id="@+id/btn_start"
                android:src="@drawable/pl"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <ImageButton
                android:id="@+id/btn_pause"
                android:src="@drawable/st"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause" />

            <Button
                android:id="@+id/btn_forward"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/forward_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
